syntax = "proto3";

option go_package = "pb/inventory";

// message value {
//   string body = 1;
// }

// message url {
//   string body = 1;
// }

// message GetBookListRequest {}
// message GetBookListResponse { repeated Book books = 1; }

// service Inventory {
//   rpc GetBookList(GetBookListRequest) returns (GetBookListResponse) {}
// }


// Services

service HashTable {
  rpc GetURL(UrlRequest) returns (UrlResponse) {}
  rpc GetValue(UrlRequest) returns (ValueResponse) {}
  rpc InsertValue(InsertRequest) returns (Status) {}
}

// Get 
message UrlRequest {
  string Key = 1;
}

// Get URL
message UrlResponse {
  string Url = 1;
}

// 
message ValueResponse {
 string Value = 1; 
}

// Insert kv
message InsertRequest {
  string Key = 1;
  string Value = 2; 
}

message Status {
  string Result = 1;
}